Styles for image uploader. z-index fix for map zoom control.

--- a/src/components/FeatureMap/FeatureMap.css
+++ b/src/components/FeatureMap/FeatureMap.css
@@ -1,4 +1,5 @@
 .zoomControlContainer {
   box-shadow: 0px 20px 60px 0px rgba(37, 38, 50, 0.15) !important;
   right: unset !important;
+  z-index: 2 !important;
 }
